[gd_scene load_steps=4 format=3 uid="uid://dlb63s6xa4xau"]

[ext_resource type="Script" path="res://UI/colorPasswordScreen.gd" id="1_lih1c"]
[ext_resource type="Texture2D" uid="uid://bdnmo2tc2flt7" path="res://Designs/ghost.jpeg" id="2_lvjgp"]
[ext_resource type="Texture2D" uid="uid://p0tnr0vnwkqb" path="res://TileSets/futuristic puzzle folder/KEYPAD.png" id="3_7lpxo"]

[node name="ColorPasswordScreen" type="Node2D"]
script = ExtResource("1_lih1c")

[node name="ColorPasswordScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 184.0

[node name="MarginContainer" type="MarginContainer" parent="ColorPasswordScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="ColorPasswordScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ghost" type="Sprite2D" parent="ColorPasswordScreen/TextureRect2"]
position = Vector2(159.5, 90)
scale = Vector2(0.438859, 0.434783)
texture = ExtResource("2_lvjgp")

[node name="Sprite2D" type="Sprite2D" parent="ColorPasswordScreen/TextureRect2"]
position = Vector2(170, 90)
scale = Vector2(3, 3)
texture = ExtResource("3_7lpxo")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorPasswordScreen/TextureRect2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 120.0
offset_top = 48.0
offset_right = 220.0
offset_bottom = 184.0
scale = Vector2(0.970745, 0.756523)

[node name="Yellow Button" type="Button" parent="ColorPasswordScreen/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Yellow"

[node name="Red Button" type="Button" parent="ColorPasswordScreen/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Red"

[node name="Green Button" type="Button" parent="ColorPasswordScreen/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Green"

[node name="Blue Button" type="Button" parent="ColorPasswordScreen/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Blue"

[connection signal="pressed" from="ColorPasswordScreen/TextureRect2/VBoxContainer/Yellow Button" to="." method="_on_yellow_button_pressed"]
[connection signal="pressed" from="ColorPasswordScreen/TextureRect2/VBoxContainer/Red Button" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="ColorPasswordScreen/TextureRect2/VBoxContainer/Green Button" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="ColorPasswordScreen/TextureRect2/VBoxContainer/Blue Button" to="." method="_on_blue_button_pressed"]
